# cirtesub_controllers

./: CMakeLists.txt  CONTROLLERS_EXPLAINED.md  README.md  cirtesub_controllers_plugins.xml  package.xml
include/cirtesub_controllers/: body_force_controller.hpp  body_velocity_controller.hpp  depth_hold_controller.hpp  mpc_4dof_controller.hpp  position_hold_controller.hpp  stabilize_controller.hpp  state_observer_controller.hpp  state_observer_model.hpp
src/: body_force_controller.cpp  body_velocity_controller.cpp  depth_hold_controller.cpp  mpc_4dof_controller.cpp  position_hold_controller.cpp  stabilize_controller.cpp  state_observer_controller.cpp  state_observer_model.cpp
test/: test_state_observer_model.cpp
